[project]
name = "pylord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-include-variants>=0.0.4",
    "mdx-include>=1.4.2",
    "mike>=2.1.3",
    "mkdocs-macros-plugin>=1.3.9",
    "mkdocs-material[imaging]>=9.6.20",
]
